--- a/public/style.css
+++ b/public/style.css
@@ -4,41 +4,17 @@
   box-sizing: border-box;
 }
 
-html {
-  font-weight: 300;
-  -webkit-font-smoothing: antialiased;
-}
 
-html, input {
-  font-family:
-    "HelveticaNeue-Light",
-    "Helvetica Neue Light",
-    "Helvetica Neue",
-    Helvetica,
-    Arial,
-    "Lucida Grande",
-    sans-serif;
-}
-
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
 
 ul {
   list-style: none;
   word-wrap: break-word;
 }
-
- /*Pages */
-
-.pages {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  width: 100%;
+.pages{
+  padding-left: 0em;
+  padding-bottom: 2em;
 }
+
 
 
  /*Login Page */
@@ -51,7 +27,7 @@ ul {
   outline: none;
   padding-bottom: 15px;
   text-align: center;
-  width: 400px;
+  width: 100%;
 }
 
 .login.page .form .roomnameInput {
@@ -61,7 +37,7 @@ ul {
     outline: none;
     padding-bottom: 15px;
     text-align: center;
-    width: 400px;
+    width: 100%;
 }
 
 
@@ -82,13 +58,12 @@ ul {
 
 .chat.page {
   display: none;
-  width: 100%;
 }
 
- Font
+ /*Font*/
 
 .messages {
-  font-size: 150%;
+  font-size: 100%;
 }
 
 .inputMessage {
@@ -97,20 +72,9 @@ ul {
 
 .log {
     color: rgb(210, 205, 205);
-    font-size: 1em;
+    font-size: 0.75em;
     margin: 0.1em;
     text-align: center;
-}
-
- /*Messages */
-
-.chatArea {
-    height: 75%;
-    /* padding-bottom: 0%; */
-    /* margin-top: 0%; */
-    position: absolute;
-    bottom: 8%;
-    width: 98.5%;
 }
 
 .messages {
@@ -130,21 +94,21 @@ ul {
   overflow: hidden;
   padding-right: 15px;
   text-align: right;
-  font-size: 1.5em;
+  font-size: 1.1em;
 }
 
 /* Input */
 
 .inputMessage {
     border: 0.5em solid #000;
-    height: 4em;
+    height: 3.5em;
     left: 0;
     outline: none;
     padding-left: 10px;
     position: fixed;
     right: 0;
     width: 100%;
-    bottom: 1%;
+    bottom: 0%;
     color: black;
 }
 /*
