--- a/public/style.css
+++ b/public/style.css
@@ -82,7 +82,7 @@ ul {
   height: 100%;
   margin: 0;
   overflow-y: scroll;
-  padding: 10px 20px 10px 20px;
+  padding: 3em 2em 0em 1em;
 }
 
 .message.typing .messageBody {
