--- a/public/style.css
+++ b/public/style.css
@@ -17,8 +17,9 @@ ul {
 
 .suggestedRooms li{
     border-radius: 0.51em;
-    height: 2em;
-    font-size: 1em;
+    height: 3em;
+    font-size: 1.5em;
+    padding-left: 0em;
     margin-top: 0.4em;
 
 }
