--- a/public/style.css
+++ b/public/style.css
@@ -318,7 +318,7 @@ body {
     }
     #contactpage{
       position: relative;
-      left: 6%;
+      left: 3%;
     }
     #contactpage h2{
       width: 93%;
@@ -340,10 +340,10 @@ body {
     }
     #contactpage{
         position: relative;
-        left: 29%;
+        left: 3%;;
     }
     #contactpage h2{
-        width: 53%;
+        width: 93%;
     }
 
 }
@@ -361,10 +361,10 @@ body {
      }
     #contactpage{
         position: relative;
-        left: 35%;
+        left: 3%;
     }
     #contactpage h2{
-        width: 29%;
+        width: 93%;
     }
 
 }
